correct alignment buttons

--- a/src/App.css
+++ b/src/App.css
@@ -159,10 +159,7 @@ body {
   text-align: center;
 }
 
-.text-alignment {
-  text-align: left;
-  padding-left: 300px;
-}
+
 .color-dark-gray {
   color: rgb(51, 51, 51);
 }
@@ -1282,7 +1279,10 @@ padding-bottom: 0px !important;
     flex-direction: row;
     gap: 52px;
 }
-
+.text-alignment {
+  text-align: left;
+  /* padding-left: 300px; */
+}
 
 }
 
@@ -1480,7 +1480,7 @@ border-bottom: .5px solid var(--color-black) !important;
 }
 .text-alignment{
   text-align: left;
-  padding-left: 40px;
+  /* padding-left: 40px; */
 }
 
 
